--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Data\'s Book on Demo</string>
+    <string name="app_name">Data s Book on Demo v1.1</string>
 </resources>
